# Guibbon

./: .coveragerc  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_user.md  fixme.txt  fixplan.md  image_controller.py  index.html  main_demo.py  main_example_cvgui.py  mkdocs.yml  prepare_python.sh  pyproject.toml  readme.md  requirements.txt  requirements_ci.txt  requirements_ci_check.txt  requirements_ci_test.txt  requirements_dev.txt  setup.cfg  sitemap.xml  tk4cv2.py  tox.ini
.github/agents/: ci-fixer.md
.github/workflows/: copilot-setup-steps.yml  tests.yml  tk4cv2_linter_py310.yml  tk4cv2_tests.yml  tk4cv2_tests_py310.yml
README_user/: index.html
about/: index.html
docs/: README_user.md  getting_started.md  index.md  release_notes.md
docs/api_reference/: index.md
docs/versions/v0.1.5/: index.md
docs/versions/v0.1.6/: index.md
examples/: main_demo.py  main_demo_advanced.py  main_demo_mvc_advanced_app.py  main_demo_mvc_app.py  main_demo_mvc_app_fail.py
getting_started/: index.html
guibbon/: __init__.py  image_viewer.py  interactive_overlays.py  mouse_pan.py  typedef.py  wrapped_tk_widgets.py
guibbon/interactive_overlays/: __init__.py  base.py
guibbon/widgets/: check_button_list_widget.py  color_picker_widget.py  color_space_widget.py  multislider_widget.py  radio_buttons_widget.py  slider_widget.py  treeview_widget.py
release_notes/: index.html
scripts/: build_docs.sh  build_docs_index.py  deploy_docs.py  deploy_docs.sh
search/: search_index.json
src/guibbon/: __init__.py  image_viewer.py  keyboard_event_handler.py  transform_matrix.py  typedef.py  wrapped_tk_widgets.py
src/guibbon/interactive_overlays/: __init__.py  base.py  multi_slider.py  polygons.py
src/guibbon/widgets/: color_picker_widget.py  color_space_widget.py  multi_slider_widget.py  multislider_widget.py  radio_buttons_widget.py  slider_widget.py  treeview_widget.py
src/tk4cv2/: __init__.py  image_viewer.py  interactive_overlays.py  keyboard_event_handler.py  main_demo.py  tk4cv2.py  transform_matrix.py  typedef.py
t0.1.6/: index.html  objects.inv  sitemap.xml
t0.1.6/api_reference/: index.html
t0.1.6/getting_started/: index.html
t0.1.6/release_notes/: index.html
t0.1.7/: index.html
t0.1.7/api_reference/: index.html
t0.1.7/getting_started/: index.html
t0.1.7/release_notes/: index.html
t0.1.8-dev/: 404.html  index.html  objects.inv
t0.1.8-dev/api_reference/: index.html
t0.1.8-dev/getting_started/: index.html
t0.1.8-dev/release_notes/: index.html
tests/: test_image_viewer.py  test_init.py  test_interactive_overlays.py  test_mouse_pan.py  test_simple.py  test_transform_matrix.py  test_typedef.py
tests/interactive_overlays/: test_base.py  test_multi_slider.py  test_polygons.py
tests/widgets/: test_button_widget.py  test_check_button_widget.py  test_color_picker_widget.py  test_color_space_widget.py  test_multi_slider_widget.py  test_multislider_widget.py  test_radio_button_widget.py  test_slider_widget.py  test_treeview_widget.py
tk4cv2/: __init__.py  colors.py  image_viewer.py  interactive_overlays.py  slider_widget.py  transform_matrix.py  typedef.py
tk4cv2/widgets/: button_widget.py  check_button_list_widget.py  check_button_widget.py  color_picker_widget.py  radio_button_widget.py  radio_buttons_widget.py  slider_widget.py  widget.py
v0.1.6-dev/: index.html  sitemap.xml
v0.1.6-dev/api_reference/: index.html
v0.1.6-dev/getting_started/: index.html
v0.1.6-dev/release_notes/: index.html
v0.2.0-dev/: 404.html  index.html  sitemap.xml
v0.2.0-dev/api_reference/: index.html
v0.2.0-dev/getting_started/: index.html
v0.2.0-dev/release_notes/: index.html
v0.2.1/: index.html
v0.2.1/api_reference/: index.html
v0.2.1/getting_started/: index.html
v0.2.1/release_notes/: index.html
v0.3.0/: index.html
v0.3.0-dev/: index.html  sitemap.xml
v0.3.0-dev/api_reference/: index.html
v0.3.0-dev/getting_started/: index.html
v0.3.0-dev/release_notes/: index.html
v0.3.0/api_reference/: index.html
v0.3.0/getting_started/: index.html
v0.3.0/release_notes/: index.html
versions/v0.1.5/: index.html
versions/v0.1.6/: index.html
